# SubtitleComposer

./: .clang-format  .copyright.sh  .crowdin.yml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .travis.yml  .uncrustify.cfg  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Messages.sh  README.CodingStyle.md  README.md  TODO  configure  index.html  install  params.json  snapcraft.yaml  subtitlecomposer.pot
po/: CMakeLists.txt  Messages.sh  status.txt  subtitlecomposer.pot
po/ar/: subtitlecomposer.po
po/bg/: CMakeLists.txt  subtitlecomposer.po
po/ca/: subtitlecomposer.po
po/ca@valencia/: subtitlecomposer.po
po/cs/: CMakeLists.txt  subtitlecomposer.po
po/de/: CMakeLists.txt  subtitlecomposer.po
po/el/: CMakeLists.txt  subtitlecomposer.po
po/en_GB/: subtitlecomposer.po
po/eo/: subtitlecomposer.po
po/es/: CMakeLists.txt  subtitlecomposer.po
po/et/: subtitlecomposer.po
po/eu/: subtitlecomposer.po
po/fi/: subtitlecomposer.po
po/fr/: CMakeLists.txt  subtitlecomposer.po
po/gl/: subtitlecomposer.po
po/hr/: CMakeLists.txt  subtitlecomposer.po
po/hu/: CMakeLists.txt  subtitlecomposer.po
po/id/: subtitlecomposer.po
po/ie/: subtitlecomposer.po
po/it/: CMakeLists.txt  subtitlecomposer.po
po/ja/: subtitlecomposer.po
po/ka/: subtitlecomposer.po
po/lt/: subtitlecomposer.po
po/nl/: subtitlecomposer.po
po/pl/: CMakeLists.txt  subtitlecomposer.po
po/pt/: subtitlecomposer.po
po/pt_BR/: CMakeLists.txt  subtitlecomposer.po
po/pt_PT/: CMakeLists.txt  subtitlecomposer.po
po/ru/: CMakeLists.txt  subtitlecomposer.po
po/sk/: subtitlecomposer.po
po/sl/: subtitlecomposer.po
po/sr/: CMakeLists.txt  subtitlecomposer.po
po/sr@latin/: CMakeLists.txt  subtitlecomposer.po
po/sv/: subtitlecomposer.po
po/tr/: subtitlecomposer.po
po/uk/: CMakeLists.txt  subtitlecomposer.po
po/zh_CN/: subtitlecomposer.po
po/zh_TW/: subtitlecomposer.po
src/: CMakeLists.txt  appglobal.cpp  appglobal.h  application.cpp  application.h  application_actions.cpp  application_errorcheck.cpp  application_subtitle.cpp  config.h.cmake  currentlinewidget.cpp  currentlinewidget.h  lineswidget.cpp  lineswidget.h  main.cpp  main_tests.h  mainwindow.cpp  mainwindow.h  org.kde.subtitlecomposer.appdata.xml  org.kde.subtitlecomposer.desktop  playerwidget.cpp  playerwidget.h  profiler.h  scconfig.kcfg  scconfig.kcfgc  scconfigdummy.cpp  scconfigdummy.h  subtitlecomposer.qrc  subtitlecomposer.rc  subtitlecomposer.xml  subtitlecomposerrc  subtitlecomposerui.rc  waveformwidget.cpp  waveformwidget.h
src/actions/: CMakeLists.txt  kcodecactionext.cpp  kcodecactionext.h  krecentfilesactionext.cpp  krecentfilesactionext.h  useraction.cpp  useraction.h  useractionnames.h
src/common/: CMakeLists.txt  commondefs.cpp  commondefs.h  fileloadhelper.cpp  fileloadhelper.h  filesavehelper.cpp  filesavehelper.h  filetrasher.cpp  filetrasher.h  languagecode.cpp  languagecode.h  qxtsignalwaiter.cpp  qxtsignalwaiter.h
src/config/: CMakeLists.txt  appconfig.cpp  appconfig.h  appconfiggroup.cpp  appconfiggroup.h  appconfiggroupwidget.cpp  appconfiggroupwidget.h
src/configs/: CMakeLists.txt  configdialog.cpp  configdialog.h  errorsconfigwidget.cpp  errorsconfigwidget.h  errorsconfigwidget.ui  generalconfigwidget.cpp  generalconfigwidget.h  generalconfigwidget.ui  playerconfigwidget.cpp  playerconfigwidget.h  playerconfigwidget.ui  waveformconfigwidget.cpp  waveformconfigwidget.h  waveformconfigwidget.ui
src/core/: CMakeLists.txt  action.h  actionmanager.cpp  actionmanager.h  audiolevels.cpp  audiolevels.h  compositeaction.h  formatdata.h  range.h  rangelist.h  richdocument.cpp  richdocument.h  richdocumenteditor.cpp  richdocumenteditor.h  richstring.cpp  richstring.h  sstring.cpp  sstring.h  subtitle.cpp  subtitle.h  subtitleactions.cpp  subtitleactions.h  subtitleiterator.cpp  subtitleiterator.h  subtitleline.cpp  subtitleline.h  subtitlelineactions.cpp  subtitlelineactions.h  subtitletarget.h  time.cpp  time.h  undoaction.cpp  undoaction.h  undostack.cpp  undostack.h
src/dialogs/: CMakeLists.txt  actiondialog.cpp  actiondialog.h  actionwitherrortargetsdialog.cpp  actionwitherrortargetsdialog.h  actionwithtargetdialog.cpp  actionwithtargetdialog.h  adjusttimesdialog.cpp  adjusttimesdialog.h  autodurationsdialog.cpp  autodurationsdialog.h  changeframeratedialog.cpp  changeframeratedialog.h  changetextscasedialog.cpp  changetextscasedialog.h  checkerrorsdialog.cpp  checkerrorsdialog.h  clearerrorsdialog.cpp  clearerrorsdialog.h  durationlimitsdialog.cpp  durationlimitsdialog.h  encodingdetectdialog.cpp  encodingdetectdialog.h  encodingdetectdialog.ui  fixoverlappingtimesdialog.cpp  fixoverlappingtimesdialog.h  fixpunctuationdialog.cpp  fixpunctuationdialog.h  insertlinedialog.cpp  insertlinedialog.h  intinputdialog.cpp  intinputdialog.h  joinsubtitlesdialog.cpp  joinsubtitlesdialog.h  opensubtitledialog.cpp  opensubtitledialog.h  progressdialog.cpp  progressdialog.h  removelinesdialog.cpp  removelinesdialog.h  (+24 more)
src/errors/: CMakeLists.txt  errorfinder.cpp  errorfinder.h  errortracker.cpp  errortracker.h  finderrorsdialog.cpp  finderrorsdialog.h
src/formats/: CMakeLists.txt  FindICU.cmake  format.h  formatmanager.cpp  formatmanager.h  inputformat.h  outputformat.h
src/gui/: CMakeLists.txt  currentlinewidget.cpp  currentlinewidget.h  linesitemdelegate.cpp  linesmodel.cpp  linesmodel.h  linesselectionmodel.cpp  linesselectionmodel.h  lineswidget.cpp  lineswidget.h  playerwidget.cpp  playerwidget.h  waveformwidget.cpp  waveformwidget.h
src/helpers/: CMakeLists.txt  common.h  commondefs.cpp  commondefs.h  debug.cpp  debug.h  fileloadhelper.cpp  fileloadhelper.h  filesavehelper.cpp  filesavehelper.h  filetrasher.cpp  filetrasher.h  languagecode.cpp  languagecode.h  objectref.h  pluginhelper.h
src/icons/: CMakeLists.txt  breeze.theme  icon-bundle.qrc  mingw-icon.sh  subtitlecomposer.rc  theme-icons-bundle.sh
src/main/: CMakeLists.txt  application.cpp  application.h  audiolevelswidget.cpp  audiolevelswidget.h  configdialog.cpp  configdialog.h  currentlinewidget.cpp  currentlinewidget.h  errorsdialog.h  (+17 more)
(+683 files in other folders)
